--- a/问卷调查/Views/Home/Index.cshtml
+++ b/问卷调查/Views/Home/Index.cshtml
@@ -1,58 +1,228 @@
-﻿@model List<Template>
-@{
+﻿@{
     Layout = "_Layout";
 }
 <link href="~/css/dashboard.css" rel="stylesheet" />
+<style>
+    #container {
+        font-size: 18px;
+    }
+</style>
 <div class="container-fluid" id="left_menu">
     <div class="">
         <div class="col-sm-2 sidebar">
-            <ul class="nav nav-sidebar">
-                @foreach (Template t in Model.OrderBy(x => x.PrintOrder))
-                {
-                    <li><a href="#" data-tid="@t.Id">@t.Name</a></li>
-                }
-            </ul>
+            <div>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#FormModal"><span class="glyphicon glyphicon-plus"></span><span style="padding-left: 10px">执行量表</span></button>
+            </div>
+            <div style="margin-top: 10px" id="div_mainlist">
+            </div>
         </div>
         <div class="col-sm-10 col-sm-offset-2 main">
             <input type="hidden" id="hd_mainId" />
-            @Html.Partial("~/Views/Home/BarHead.cshtml")
-            <div id="container" class="container" style="margin-top: 60px;width:960px">
+            <input type="hidden" id="hd_tId" />
+            <input type="hidden" id="hd_tName" />
+
+            <div id="patinfo" class=""></div>
+
+            <div id="container" class="" style="margin-top: 20px;">
 
             </div>
-            <div class="col-sm-12" id="Paginator"> <ul id="pageLimit"></ul> </div>
+            <div>
+                <button id="btnSave" class="btn btn-primary hidden" onclick="save()"><span class="glyphicon glyphicon-floppy-disk"></span><span style="padding-left: 10px">保存</span></button>
+            </div>
+            @*<div class="col-sm-12" id="Paginator"> <ul id="pageLimit"></ul> </div>*@
         </div>
     </div>
 </div>
 
+<div class="modal fade" id="FormModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="ModalLabel">
+                    请选择表单
+                </h4>
+            </div>
+            <div class="modal-body" style="height: 300px">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    关闭
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<div class="modal fade" id="patientInfoModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="ModalLabel">
+                    请填写病人信息
+                </h4>
+            </div>
+            <div class="modal-body" style="height: 200px">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="AddPatient();">
+                    提交
+                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    关闭
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
 @section scripts{
-    <script src="~/lib/jquery/dist/jQuery.print.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap-paginator.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap-suggest.min.js"></script>
     <script>
         var pagesize = 10;
         var visitID = '';
         var dataResult = '';
+        //var dataList = { value: [] }, i = 5;
+        //while (i--) {
+        //    dataList.value.push({
+        //        name: 'xxx',
+        //        shortname: 'xxx',
+        //        visitId: '123',
+        //    });
+        //}
         $(function () {
-            $('#left_menu li').click(function () {
-                if (!Check()) return;
+            InitSuggest();
 
-                $(this).siblings().removeClass('active');
-                $(this).addClass('active');
+            $('#FormModal').on('show.bs.modal',
+                function () {
+                    if (!Check()) {
+                        return false;
+                    } else {
+                        $.get('/Home/GetFormList',
+                            function (data) {
+                                $('#FormModal .modal-body').html(data);
+                            })
+                    }
+                })
 
-                var id = $(this).find('a').data('tid');
-                $.get('/Settings/GetFormHtml/' + id,
-                    function (data) {
-                        $('#container').html(data);
-                        Bindcheckboxs(); //绑定单选
-                        BindSum(); //绑定合计
-                        $('button.hidden').removeClass('hidden').addClass('btn-show');
-                        $('#Paginator').hide();
-                    });
-            });
+            $('#patientInfoModal').on('show.bs.modal',
+                function () {
+                    var html = '<div class="container-fluid">';
+                    html +=
+                        '<div class="row"><div class="col-sm-6"><div class="form-group">患者号<input type="text" class="form-control" name="visitId" style="width:180px"/></div></div><div class="col-sm-6"><div class="form-group">患者姓名<input type="text" class="form-control" name="name" style="width:180px"/></div></div></div>';
 
-            $('#txt_visitId').change(function () {
-                visitID = $(this).val();
-            });
+                    html +=
+                        '<div class="row"><div class="col-sm-6"><div class="form-group">出生年月<input type="date" class="form-control" name="birthday" style="width:180px"/></div></div><div class="col-sm-6"><div class="form-group">性别<select style="width:100px" class="form-control" name="sex"><option value="1">男</option><option value="2">女</option></select></div></div></div>';
+
+                    html += "</div>";
+
+                    $('#patientInfoModal .modal-body').html(html);
+                })
         });
+
+        function AddPatient() {
+            var visitId = $('#patientInfoModal input[name="visitId"]').val();
+            var name = $('#patientInfoModal input[name="name"]').val();
+            var birthday = $('#patientInfoModal input[name="birthday"]').val();
+            var sex = $('#patientInfoModal select[name="sex"]').val();
+
+            if (visitId == '') {
+                alert('患者号不能为空！');
+                return false;
+            }
+            if (name == '') {
+                alert('患者姓名不能为空！');
+                return false;
+            }
+
+            $.post('/Settings/AddPatient',
+                { visitId: visitId, name: name, birthday: birthday, sex: sex },
+                function () {
+                    alert('提交成功！');
+                    window.location.reload();
+                });
+        }
+
+        function InitSuggest() {
+            $("#txt_visitId").bsSuggest({
+                //data: dataList,
+                url: '/Home/GetPatientList',
+                showHeader: true,
+                effectiveFieldsAlias: { visitId: '患者号', name: '姓名' },
+                inputWarnColor: 'white',
+                indexKey: 1,
+                hideOnSelect: true
+            }).on('onSetSelectValue',
+                function (e, selectedData, selectedRawData) {
+                    visitID = selectedData.key;
+                }).on('onHideDropdown',
+                function (e, data) {
+                    var flag = true; //是错误的患者号
+                    $.each(data,
+                        function () {
+                            if (this.visitId == e.target.value) {
+                                flag = false;
+                                return false;
+                            }
+                        })
+
+                    if (flag) {
+                        visitID = ''
+                    } else {
+                        visitID = e.target.value;
+                    }
+                });
+        }
+
+        function DesSuggest() {
+            $("#txt_visitId").bsSuggest("destroy");
+        }
+
+        function VisitIdSelected(visitid) {
+            $.get('Home/GetPatientInfo',
+                { visitID: visitid },
+                function (data) {
+                    $('#patinfo').html(data);
+                })
+        }
+
+        function ExchangeMode(obj) {
+            if ($(obj).hasClass('btn-default')) {
+                //编辑模式
+                $(obj).removeClass('btn-default').addClass('btn-primary').html(
+                    '<span class="glyphicon glyphicon-pencil"></span><span style="padding-left: 10px">编辑</span>');
+                $('#container input,select').removeAttr('disabled');
+                $('#btnSave').removeClass('hidden');
+            } else {
+                //只读模式
+                $(obj).removeClass('btn-primary').addClass('btn-default').html(
+                    '<span class="glyphicon glyphicon-eye-open"></span><span style="padding-left: 10px">预览</span>');
+                $('#container input,select').attr('disabled', 'true');
+                $('#btnSave').addClass('hidden');
+            }
+        }
+
+        function OpenForm(id, name) {
+            $.get('/Settings/GetFormHtml/' + id,
+                function (data) {
+                    $('#container').html(data);
+                    Bindcheckboxs(); //绑定单选
+                    BindSum(); //绑定合计
+
+                    $('#FormModal').modal('hide');
+                    $('#btnSave').removeClass('hidden');
+                    $('#btnMode').addClass('hidden');
+                    $('#hd_tId').val(id);
+                    $('#hd_tName').val(name);
+                });
+        }
 
         function Bindcheckboxs() {
             //所有父节点设置唯一值的子checkbox设置为互斥
@@ -230,49 +400,6 @@
             return flag;
         }
 
-        function InitPage() {
-            $('#pageLimit').bootstrapPaginator(GetOption());
-        }
-
-        function GetOption() {
-            var totalcount = $('#hd_formListCount').val();
-            var totalpage;
-            if (totalcount % pagesize == 0) {
-                totalpage = totalcount / pagesize;
-            } else {
-                totalpage = totalcount / pagesize + 1;
-            }
-            return {
-                currentPage: 1,
-                totalPages: totalpage,
-                size: "normal",
-                bootstrapMajorVersion: 3,
-                alignment: "right",
-                numberOfPages: 5,
-                itemTexts: function (type, page, current) {
-                    switch (type) {
-                        case "first":
-                            return "首页";
-                        case "prev":
-                            return "上一页";
-                        case "next":
-                            return "下一页";
-                        case "last":
-                            return "末页";
-                        case "page":
-                            return page;
-                    }
-                },
-                onPageClicked: function (event, originalEvent, type, page) {
-                    $.get('/Home/SearchPatientForm',
-                        { visitId: visitID, pageNum: page, pageSize: pagesize },
-                        function (data) {
-                            $('#container').html(data);
-                        });
-                }
-            }
-        }
-
         function popshow() {
             $('#txt_visitId').popover('show');
 
@@ -286,13 +413,19 @@
         function search() {
             if (!Check()) return;
 
-            $.get('/Home/SearchPatientForm/',
-                { visitId: visitID, pageSize: pagesize },
+            $.get('Home/GetPatientInfo',
+                { visitID: visitID },
                 function (data) {
-                    $('#container').html(data);
-                    InitPage();
-                    $('button.btn-show').removeClass('btn-show').addClass('hidden');
-                    $('#Paginator').show();
+                    $('#patinfo').html(data);
+                })
+
+            $.get('/Home/SearchPatientForm/',
+                { visitId: visitID },
+                function (data) {
+                    $('#div_mainlist').html(data);
+                    $('#container').html('');
+                    $('#btnMode').addClass('hidden')
+                    $('#btnSave').addClass('hidden');
                 });
         }
 
@@ -343,7 +476,8 @@
                                     if (obj.attr('id') == 'checkbox_5_1' || obj.attr('id') == 'checkbox_5_2') {
                                         if ($('#checkbox_5_1').is(':checked') && $('#checkbox_5_2').is(':checked')) {
                                             trcheckednum = 2
-                                        } else if ($('#checkbox_5_1').is(':checked') || $('#checkbox_5_2').is(':checked')) {
+                                        } else if ($('#checkbox_5_1').is(':checked') ||
+                                            $('#checkbox_5_2').is(':checked')) {
                                             trcheckednum = 1;
                                         } else {
                                             trcheckednum = 0;
@@ -361,18 +495,22 @@
                             //绑定text
                         });
 
-                    BindSum();
                     Bindcheckboxs();
+                    BindSum();
                     $('#container .calcsum').text(data.result);
 
-                    $('button.hidden').removeClass('hidden').addClass('btn-show');
-                    $('#Paginator').hide();
+                    $('#btnMode').removeClass('hidden').removeClass('btn-primary').removeClass('btn-default')
+                        .addClass('btn-default')
+                        .html(
+                            '<span class="glyphicon glyphicon-eye-open"></span><span style="padding-left: 10px">预览</span>');
+                    $('#btnSave').addClass('hidden');
+                    $('#container input,select').attr('disabled', 'true');
                 });
         }
 
         function save() {
             var tableData = [];
-            var tid = $('#left_menu li.active a').data('tid');
+            var tid = $('#hd_tId').val();
             if (tid == 7 && !CheckNeedPZB()) return;
             if (tid == 11 && !CheckNeedSF36()) return;
             if (tid == 9 && !CheckNeedJYZL()) return;
@@ -421,17 +559,17 @@
             $.post('/FormData/SaveBindData',
                 {
                     visitID: visitID,
-                    name: $('#left_menu li.active a').html(),
-                    templateId: $('#left_menu li.active a').data('tid'),
+                    name: $('#hd_tName').val(),
+                    templateId: tid,
                     key: $('#hd_mainId').val(),
                     data: JSON.stringify(tableData),
                     dataResult: dataResult
                 },
                 function (data) {
-                    $('#container').html(data);
+                    $('#div_mainlist').html(data);
                     $('#hd_mainId').val('');
-                    $('button.btn-show').removeClass('btn-show').addClass('hidden');
-                    $('#Paginator').show();
+                    $('#container input,select').attr('disabled', 'true');
+                    $('#btnSave,#btnMode').addClass('hidden');
                 });
 
         }
@@ -444,6 +582,10 @@
                     $('#container').html(data);
                     $('button.btn-show').removeClass('btn-show').addClass('hidden');
                 });
+        }
+
+        function execform() {
+
         }
     </script>
 }
