--- a/问卷调查/Template/量表---基本信息.html
+++ b/问卷调查/Template/量表---基本信息.html
@@ -133,7 +133,7 @@
 <p><input type="checkbox" parent="24" desc="既往有无睡眠监测诊断" id="checkbox_24_1" />无<input type="checkbox"  desc="既往有无睡眠监测诊断" id="checkbox_24_2" />有</p>
 <p>25.既往有无鼾症相关治疗</p>
 <p><input type="checkbox" parent="25" desc="既往有无鼾症相关治疗" id="checkbox_25_1" />无<input type="checkbox" desc="既往有无鼾症相关治疗" id="checkbox_25_2" />有</p>
-<p class="subp">25.1若有治疗，治疗方式为</p>
+<p class="subp">25.1若有治疗，治疗方式为（可多选）</p>
 <p class="subp">
     <input type="checkbox" desc="若有治疗，治疗方式为" id="checkbox_25_3" />呼吸机
     <input type="checkbox" desc="若有治疗，治疗方式为" id="checkbox_25_4" />鼾症手术
@@ -191,7 +191,7 @@
     <input type="checkbox" desc="是否服降糖药" id="checkbox_27_10" />否
     <input type="checkbox" desc="是否服降糖药" id="checkbox_27_11" />是
 </p>
-<p class="subp">27.4服用降糖药名称</p>
+<p class="subp">27.4服用降糖药名称（可多选）</p>
 <p class="subp">
     <input type="checkbox" desc="服用降糖药名称" id="checkbox_27_12" />磺脲类
     <input type="checkbox" desc="服用降糖药名称" id="checkbox_27_13" />双胍类
@@ -236,7 +236,7 @@
     <input type="checkbox" desc="是否服降脂药" id="checkbox_28_11" />不规律服药
     <input type="checkbox" desc="是否服降脂药" id="checkbox_28_12" />规律服药
 </p>
-<p class="subp">28.4降脂药类型</p>
+<p class="subp">28.4降脂药类型（可多选）</p>
 <p class="subp">
     <input type="checkbox" desc="降脂药类型" id="checkbox_28_13" />他汀类
     <input type="checkbox" desc="降脂药类型" id="checkbox_28_14" />贝特类
