--- a/问卷调查/Views/Shared/_Layout.cshtml
+++ b/问卷调查/Views/Shared/_Layout.cshtml
@@ -47,15 +47,15 @@
             </div>
             <div class="navbar-header col-sm-3" style="padding-right: 5px;padding-left: 0">
                 <div class="input-group" style="width:100%">
-                    <input autocomplete="off" style="margin-top: 8px" type="text" class="form-control" placeholder="请输入患者号/患者姓名..." id="txt_visitId"
-                           data-toggle="popover" data-content="患者不存在，请重新选择或添加新患者。" data-placement="bottom">
+                    <input autocomplete="off" style="margin-top: 8px" type="text" class="form-control" placeholder="请输入患者号..." id="txt_visitId"
+                           data-toggle="popover" data-content="患者不存在，请重新输入或添加新患者。" data-placement="bottom">
                     <div class="input-group-btn" style="width: 0">
                         <ul class="dropdown-menu dropdown-menu-right" role="menu"></ul>
                     </div>
                 </div>
             </div>
             <div class="navbar-header col-sm-2" style="padding-left: 0">
-                <button style="margin-top:8px" class="btn btn-default" type="button" onclick="search();"><span class="glyphicon glyphicon-search"></span><span style="margin-left:10px">查询</span></button>
+                <button style="margin-top:8px" class="btn btn-default" type="button" onclick="search();"><span class="glyphicon glyphicon-hand-left"></span><span style="margin-left:10px">确认</span></button>
             </div>
             <div>
                 <button style="margin-top:8px" class="btn btn-default pull-right" type="button" onclick="AddPatient" data-toggle="modal" data-target="#patientInfoModal"><span class="glyphicon glyphicon-user"></span><span style="margin-left:10px">添加患者</span></button>
