--- a/问卷调查/Views/MobilePregnant/Index.cshtml
+++ b/问卷调查/Views/MobilePregnant/Index.cshtml
@@ -91,58 +91,58 @@
                         '<div>5.近1个月，因下列情况影响睡眠而烦恼</div>' +
                         '<div>a.入睡困难(30分钟内不能入睡)：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_1" parent="5" desc="入睡困难(30分钟内不能入睡)" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_2"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_3">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_4">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_2" desc="入睡困难(30分钟内不能入睡)"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_3" desc="入睡困难(30分钟内不能入睡)">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_4" desc="入睡困难(30分钟内不能入睡)">≥ 3次/周</div></div>' +
                         '<div>b.夜间易醒或早醒：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_5" parent="5" desc="夜间易醒或早醒" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_6"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_7">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_8">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_6" desc="夜间易醒或早醒"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_7" desc="夜间易醒或早醒">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_8" desc="夜间易醒或早醒">≥ 3次/周</div></div>' +
                         '<div>c.夜间去厕所：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_9" parent="5" desc="夜间去厕所" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_10"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_11">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_12">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_10" desc="夜间去厕所"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_11" desc="夜间去厕所">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_12" desc="夜间去厕所">≥ 3次/周</div></div>' +
                         '<div>d.呼吸不畅：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_13" parent="5" desc="呼吸不畅" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_14"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_15">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_16">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_14" desc="呼吸不畅"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_15" desc="呼吸不畅">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_16" desc="呼吸不畅">≥ 3次/周</div></div>' +
                         '<div>e.咳嗽或鼾声高：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_17" parent="5" desc="咳嗽或鼾声高" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_18"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_19">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_20">≥ 3次/周</div></div>',
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_18" desc="咳嗽或鼾声高"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_19" desc="咳嗽或鼾声高">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_20" desc="咳嗽或鼾声高">≥ 3次/周</div></div>',
                     show: false
                 },
                 {
                     html: '<div>f.感觉冷：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_21" parent="5" desc="感觉冷" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_22"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_23">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_24">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_22" desc="感觉冷"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_23" desc="感觉冷">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_24" desc="感觉冷">≥ 3次/周</div></div>' +
                         '<div>g.感觉热：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_25" parent="5" desc="感觉热" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_26"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_27">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_28">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_26" desc="感觉热"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_27" desc="感觉热">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_28" desc="感觉热">≥ 3次/周</div></div>' +
                         '<div>h.做恶梦：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_29" parent="5" desc="做恶梦" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_30"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_31">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_32">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_30" desc="做恶梦"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_31" desc="做恶梦">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_32" desc="做恶梦">≥ 3次/周</div></div>' +
                         '<div>i.疼痛不适：</div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_33" parent="5" desc="疼痛不适" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_34"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_35">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_36">≥ 3次/周</div></div>' +
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_34" desc="疼痛不适"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_35" desc="疼痛不适">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_36" desc="疼痛不适">≥ 3次/周</div></div>' +
                         '<div>j. 其它影响睡眠的事情： </div>' +
                         '<div><div>(1)&nbsp;<input type="checkbox" id="A5_37" parent="5" desc="其它影响睡眠的事情" group="A" >无</div>' +
-                        '<div>(2)&nbsp;<input type="checkbox" id="A5_38"> <1次/周</div>' +
-                        '<div>(3)&nbsp;<input type="checkbox" id="A5_39">1-2次/周</div>' +
-                        '<div>(4)&nbsp;<input type="checkbox" id="A5_40">≥ 3次/周</div>' +
-                        '<div>如有，请说明：<input type="text" id="A5_41" style="width:200px"></div>',
+                        '<div>(2)&nbsp;<input type="checkbox" id="A5_38" desc="其它影响睡眠的事情"> <1次/周</div>' +
+                        '<div>(3)&nbsp;<input type="checkbox" id="A5_39" desc="其它影响睡眠的事情">1-2次/周</div>' +
+                        '<div>(4)&nbsp;<input type="checkbox" id="A5_40" desc="其它影响睡眠的事情">≥ 3次/周</div>' +
+                        '<div>如有，请说明：<input type="text" id="A5_41" desc="说明" style="width:200px"></div>',
                     show: false
                 },
                 {
@@ -539,14 +539,13 @@
                 var pGroup = $(this).attr('group');
 
                 var items = $('[id^=' + pGroup + pIndex + '_]');
-
                 $.each(items,
                     function () {
                         var type = $(this).attr('type');
                         var item = $(this);
                         var itemid = item.attr('id');
                         var itemAttribution = type === 'text' ? '' : $(this).prop('checked') ? 'checked' : '';
-                        //var itemDesc = item.attr('desc');
+                        var itemDesc = item.attr('desc');
                         var itemValue = item.val();
                         var flag = false;
 
@@ -567,7 +566,7 @@
 
                             DataSign: itemid,
                             Attribution: itemAttribution,
-                            //ItemDesc: itemDesc,
+                            ItemDesc: itemDesc,
                             ItemValue: itemValue
                         });
 
