--- a/问卷调查/Views/MobilePregnant/Index.cshtml
+++ b/问卷调查/Views/MobilePregnant/Index.cshtml
@@ -142,7 +142,7 @@
                         '<div>(2)&nbsp;<input type="checkbox" id="A5_38" desc="其它影响睡眠的事情"> <1次/周</div>' +
                         '<div>(3)&nbsp;<input type="checkbox" id="A5_39" desc="其它影响睡眠的事情">1-2次/周</div>' +
                         '<div>(4)&nbsp;<input type="checkbox" id="A5_40" desc="其它影响睡眠的事情">≥ 3次/周</div>' +
-                        '<div>如有，请说明：<input type="text" id="A5_41" desc="说明" style="width:200px"></div>',
+                        '<div>如有，请说明：<input type="text" id="A5_41" desc="事情说明" style="width:200px"></div>',
                     show: false
                 },
                 {
@@ -200,7 +200,7 @@
                         '<div>(2)&nbsp;<input type="checkbox" id="A10_22"> <1次/周</div>' +
                         '<div>(3)&nbsp;<input type="checkbox" id="A10_23">1-2次/周</div>' +
                         '<div>(4)&nbsp;<input type="checkbox" id="A10_24">≥ 3次/周</div>' +
-                        '<div>如果有请描述：<input type="text" id="A10_25" style="width:200px"></div></div>',
+                        '<div>如果有请描述：<input type="text" id="A10_25" style="width:200px" desc="烦躁不安表现描述"></div></div>',
                     show: false
                 },
                 {
